kubernetes/komga/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: komga
spec:
  selector:
    app: komga
  ports:
  - port: 25600
    targetPort: 25600
    name: http
